--- a/styles/categories.css
+++ b/styles/categories.css
@@ -12,75 +12,122 @@
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-    width: 100%;
+    font-family: "Bodoni Moda";
 }
 
 a {
     text-decoration: none;
 }
 
+#head {
+    position: fixed;
+    width: 100%;
+}
 /*---------------Header---------------*/
 #header {
     background-color: #6F4F28;
     color: #D4AF37;
     width: 100%;
-    height: 11.5rem;
-    padding-top: 1rem;
+    height: 6rem;
 }
 
 #header h1 {
     font-family: "Bodoni Moda";
     font-style: italic;
     font-weight: 300;
-    font-size: 5rem;
+    font-size: 4.3rem;
     text-align: center;
     height: 6rem;
 }
 
-#header p {
+/*---------------Navigation---------------*/
+#navbar {
+    background-color: #C98B4A;
+    width: 100%;
+    height: 2rem;
+    padding: 0.25rem 0;
+}
+
+#navbar ul {
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+}
+
+#navbar a {
+    color: #6F4F28;
     font-family: "Poppins";
-    font-style: italic;
-    font-weight: 200;
     font-size: 1rem;
+    padding: 0.1rem 0.4rem;
+}
+
+#location {
+    background-color: #B57E44;
+    border-radius: 6px;
+}
+
+/*---------------Menu---------------*/
+#title {
+    color: #C98B4A;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 3rem;
+    text-decoration: underline;
+    text-underline-offset: 0.3rem;
+    text-decoration-thickness: 2px;
+    text-align: center;
+    padding-top: 8rem;
+}
+
+#items {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 0.5rem;
+    gap: 1rem;
+}
+
+.item {
+    background-color: #B8A88D;
+    border-radius: 6px;
+    width: 23.5rem;
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
+
+}
+
+.item img {
+    width: 22.5rem;
+    height: 13rem;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
+.item h3 {
+    color: #8B6A4A;
+    font-size: 1.5rem;
+    font-weight: 500;
+    font-style: italic;
     text-align: center;
 }
 
-/*---------------Categories---------------*/
-#categories {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    gap: 1rem;
-    padding: 1.5rem 0;
-}
-
-.image-container {
-    position: relative;
-    width: 23rem;
-    height: 8rem;
-}
-
-.image-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 6px;
-    box-shadow: 2px 2px 5px grey;
-}
-
-.overlay-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-size: 40px;
-    font-weight: 200;
+.item p {
+    color: #8B6A4A;
+    font-size: 0.8rem;
+    font-weight: 300;
+    font-family: "poppins";
     font-style: italic;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    text-align: center;
+}
+
+.item h4 {
+    color: #8B6A4A;
+    font-size: 1rem;
+    font-weight: 600;
+    font-family: "poppins";
+    text-align: center;
+    padding-top: 0.5rem;
 }
 
 /*---------------Footer---------------*/
@@ -89,6 +136,7 @@ a {
     color: #C98B4A;
     text-align: center;
     width: 100%;
+    margin-top: 2rem;
 }
 
 #footer h2 {
